Moved rating slider to its own component and fixed issue with overlapping text for it

--- a/src/pages/Restaurant/index.module.scss
+++ b/src/pages/Restaurant/index.module.scss
@@ -35,5 +35,12 @@
             padding: 10px 0px;
             border-bottom: 1px solid black;
         }
+
+        &__notes {
+            margin-top: 10px;
+            margin-left: 10px;
+
+            font-size: 25px;
+        }
     }
 }
